[gd_scene load_steps=4 format=3 uid="uid://x0sugc8x8e5m"]

[ext_resource type="Theme" uid="uid://dmjqb0k5k0xy6" path="res://base_theme.tres" id="1_608v6"]
[ext_resource type="Script" uid="uid://1p513fnckg4o" path="res://save_panel.gd" id="2_jyl3f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyl3f"]
bg_color = Color(0, 0, 0, 0.411765)

[node name="SaveScore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_608v6")
script = ExtResource("2_jyl3f")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jyl3f")

[node name="SavePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_608v6")

[node name="MarginContainer" type="MarginContainer" parent="SavePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Container" type="VBoxContainer" parent="SavePanel/MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="SavePanel/MarginContainer/Container"]
layout_mode = 2
text = "Name"

[node name="NameInput" type="LineEdit" parent="SavePanel/MarginContainer/Container"]
layout_mode = 2
max_length = 12
emoji_menu_enabled = false

[node name="ErrorLabel" type="Label" parent="SavePanel/MarginContainer/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.284231, 0.251582, 1)
theme_override_font_sizes/font_size = 14
text = "Name already exists"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="text_submitted" from="SavePanel/MarginContainer/Container/NameInput" to="." method="_on_name_input_text_submitted"]
